--- a/motorsports.html
+++ b/motorsports.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 - Pre Season Testing (Day 3)</a></td>
-<td>February 19, 2026 11:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 21:15:00" data-start="February 19, 2026 21:00:00"></span>
+<td><a href="https://roxiestreams.info/nasar">NASCAR Craftsman Truck Series</a></td>
+<td>February 20, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 21:15:00" data-start="February 20, 2026 12:00:00"></span>
 </td>
 <tr>
 </tr></tr></tr></tr></tr></tbody>
