--- a/index.html
+++ b/index.html
@@ -217,28 +217,23 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 19, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 18, 2026 00:01:00 AM"></span></td>
+<td>February 20, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 20, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">UEFA Europa League</a></td>
-<td>February 19, 2026 09:45 AM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/darts">Premier League Darts</a></td>
-<td>February 19, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 AM" data-start="February 19, 2026 11:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
+<td>February 20, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 12:00:00 PM" data-start="February 20, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 19, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 PM" data-start="February 19, 2026 4:00:00 PM"></span></td>
+<td>February 20, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 04:00:00 PM" data-start="February 20, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/f1">Formula 1 - Pre Season Testing</a></td>
-<td>February 19, 2026 11:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 PM" data-start="February 19, 2026 11:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/f1">WWE Smackdown</a></td>
+<td>February 20, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 05:00:00 PM" data-start="February 20, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody>
