--- a/nba.html
+++ b/nba.html
@@ -273,6 +273,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 21, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Orlando Magic vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 21, 2026 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 2:00 PM:00" data-start="February 21, 2026 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Philadelphia 76ers vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        February 21, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 4:00 PM:00" data-start="February 21, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Memphis Grizzlies vs Miami Heat
+        </a>
+       </td>
+       <td>
+        February 21, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 5:00 PM:00" data-start="February 21, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Detroit Pistons vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        February 21, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 5:00 PM:00" data-start="February 21, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Sacramento Kings vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        February 21, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 5:00 PM:00" data-start="February 21, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Houston Rockets vs New York Knicks
+        </a>
+       </td>
+       <td>
+        February 21, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 22, 2026 5:30 PM:00" data-start="February 21, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
