--- a/fighting.html
+++ b/fighting.html
@@ -100,9 +100,13 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
-<td>February 20, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 20, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Strickland vs Hernandez</a></td>
+<td>February 21, 2026 14:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 14:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/ppv-streams-1">Ryan Garica vs Mario Barriors</a></td>
+<td>February 21, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 15:00:00"></span></td>
 </tr>
 </tbody>
 </table>
