--- a/index.html
+++ b/index.html
@@ -217,23 +217,33 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 20, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 20, 2026 00:01:00 AM"></span></td>
+<td>February 21, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 21, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
-<td>February 20, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
+<td>February 21, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer">AMA Supercross</a></td>
+<td>February 21, 2026 10:00 AM/4:00 PM</td>
 <td><span class="countdown-timer" data-end="February 21, 2026 12:00:00 PM" data-start="February 20, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 20, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 21, 2026 04:00:00 PM" data-start="February 20, 2026 04:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/soccer">MLS</a></td>
+<td>February 21, 2026 1:45 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 01:45:00 PM" data-start="February 21, 2026 01:45:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/f1">WWE Smackdown</a></td>
-<td>February 20, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 21, 2026 05:00:00 PM" data-start="February 20, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/ufc">UFC</a></td>
+<td>February 21, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:00:00 PM" data-start="February 21, 2026 02:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/ppv-streams-1">Ryan Garica vs Mario Barriors</a></td>
+<td>February 21, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 03:00:00 PM" data-start="February 21, 2026 03:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody>
