--- a/fighting.html
+++ b/fighting.html
@@ -100,6 +100,10 @@
 </thead>
 <tbody>
 <tr>
+<td><a href="https://roxiestreams.info/ppv-streams-2">Cage Warriors 200</a></td>
+<td>February 21, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 14:00:00"></span></td>
+</tr>
 <td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Strickland vs Hernandez</a></td>
 <td>February 21, 2026 14:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 14:00:00"></span></td>
