--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <td><span class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">AMA Supercross</a></td>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross</a></td>
 <td>February 21, 2026 10:00 AM/4:00 PM</td>
 <td><span class="countdown-timer" data-end="February 22, 2026 12:00:00 PM" data-start="February 21, 2026 10:00:00 AM"></span></td>
 </tr>
