--- a/ufc.html
+++ b/ufc.html
@@ -106,6 +106,7 @@
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 2 (TNT)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 3 (SPORTSNET)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (Para+)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
