--- a/nascar.html
+++ b/nascar.html
@@ -104,6 +104,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/nascar.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://dtmf21.b-cdn.net/docx/master.m3u8')">Stream 2 (International)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
