--- a/fighting.html
+++ b/fighting.html
@@ -108,7 +108,7 @@
 <td>February 21, 2026 14:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 14:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">Ryan Garica vs Mario Barriors</a></td>
+<td><a href="https://roxiestreams.info/ppv-streams-1">Ryan Garcia vs Mario Barriors</a></td>
 <td>February 21, 2026 15:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 21, 2026 15:00:00"></span></td>
 </tr>
