--- a/ufc.html
+++ b/ufc.html
@@ -104,8 +104,8 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 2 (TNT)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 3 (SPORTSNET)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 2 (SportsNet)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 3 (TNT)</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('para.m3u8', '601'))">Stream 4 (Para+)</button>
 	</div>
             <div class="embedchat">
