--- a/redzone.html
+++ b/redzone.html
@@ -126,7 +126,7 @@ var domains = [];
 var subdomain = 'daffodil';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domains.txt')
+fetch('domainsc.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -134,7 +134,7 @@ fetch('domains.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('redzone.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domains.txt');
+    console.error('Failed to load domainsc.txt');
   });
 
 function getRandomStream(streamPath, subdomain = 'daffodil') {
