--- a/ufc.html
+++ b/ufc.html
@@ -127,7 +127,7 @@ var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domains.txt')
+fetch('domainsc.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -135,7 +135,7 @@ fetch('domains.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('ataide.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domains.txt');
+    console.error('Failed to load domainsc.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
