--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -135,7 +135,7 @@ fetch('domains2.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('daffodil.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domainsc.txt');
+    console.error('Failed to load domainsd.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
