--- a/nfl-streams-3.html
+++ b/nfl-streams-3.html
@@ -129,14 +129,14 @@ var clapprPlayer;
 var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
-fetch('domainsc.txt')
+fetch('domainsd.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\\n').filter(d => d.trim());
     setTimeout(() => showPlayer('clappr', getRandomStream('daffodil.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domainsc.txt');
+    console.error('Failed to load domainsd.txt');
   });
 
 function getRandomStream(streamPath, subdomain = '601') {
