--- a/soccer-streams-11.html
+++ b/soccer-streams-11.html
@@ -125,7 +125,7 @@ var domains = [];
 var subdomain = 'daffodil';  // Edit this per HTML file
 
 // Load domains from txt file
-fetch('domainsc.txt')
+fetch('domainsd.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
@@ -133,7 +133,7 @@ fetch('domainsc.txt')
     setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
   })
   .catch(() => {
-    console.error('Failed to load domainsc.txt');
+    console.error('Failed to load domainsd.txt');
   });
 
 function getRandomStream(streamPath, subdomain = 'daffodil') {
